@@ -30,13 +30,13 @@ class DimensionsTest {
 
   @Test
   void testEmpty() {
-    assertEquals(Dimensions.of(Tensors.empty()), Arrays.asList(0));
+    assertEquals(Dimensions.of(Tensors.empty()), List.of(0));
   }
 
   @Test
   void testVectors() {
     Tensor a = Tensors.vectorLong(1, 2, 3);
-    assertEquals(Dimensions.of(a), Arrays.asList(3));
+    assertEquals(Dimensions.of(a), List.of(3));
     Tensor b = Tensors.vectorLong(1, 2, 2);
     Tensor e = Tensors.of(a, b);
     assertEquals(Dimensions.of(e), Arrays.asList(2, 3));
@@ -50,7 +50,7 @@ class DimensionsTest {
     Tensor d = Tensors.of(a, b, c);
     Tensor e = Tensors.of(a, b);
     Tensor f = Tensors.of(d, e);
-    assertEquals(Dimensions.of(f), Arrays.asList(2));
+    assertEquals(Dimensions.of(f), List.of(2));
     Tensor g = Tensors.of(d, d, d, d);
     assertEquals(Dimensions.of(g), Arrays.asList(4, 3));
   }
@@ -61,7 +61,7 @@ class DimensionsTest {
     Tensor b = Tensors.vectorLong(3, 2);
     Tensor c = DoubleScalar.of(1.23);
     Tensor d = Tensors.of(a, b, c);
-    assertEquals(Dimensions.of(d), Arrays.asList(3));
+    assertEquals(Dimensions.of(d), List.of(3));
   }
 
   @Test
@@ -84,7 +84,7 @@ class DimensionsTest {
   void testLengths() throws ClassNotFoundException, IOException {
     Tensor tensor = Tensors.fromString("{{{2, 3}, {{}}}, {4, 5, 7}, 3}");
     Dimensions dimensions = Serialization.copy(new Dimensions(tensor));
-    assertEquals(dimensions.lengths(0), new HashSet<>(Arrays.asList(3)));
+    assertEquals(dimensions.lengths(0), new HashSet<>(List.of(3)));
     assertEquals(dimensions.lengths(1), new HashSet<>(Arrays.asList(Scalar.LENGTH, 2, 3)));
     assertEquals(dimensions.lengths(2), new HashSet<>(Arrays.asList(Scalar.LENGTH, 1, 2)));
     assertEquals(dimensions.lengths(3), new HashSet<>(Arrays.asList(Scalar.LENGTH, 0)));
@@ -100,7 +100,7 @@ class DimensionsTest {
   void testScalar2() {
     Dimensions dimensions = new Dimensions(Pi.VALUE);
     assertTrue(dimensions.isArray());
-    assertEquals(dimensions.list(), Arrays.asList());
+    assertEquals(dimensions.list(), List.of());
   }
 
   @Test
