@@ -5,6 +5,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -45,7 +46,7 @@ class IntegerDigitsTest {
 
   @Test
   void testZero() {
-    assertEquals(IntegerDigits.of(RealScalar.ZERO), Tensors.vector(Arrays.asList()));
+    assertEquals(IntegerDigits.of(RealScalar.ZERO), Tensors.vector(List.of()));
   }
 
   @Test
