@@ -7,8 +7,7 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.HashMap;
-import java.util.Map;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
@@ -108,7 +107,6 @@ class SparseArrayTest {
   @Test
   void testFails() {
     Tensor sparse = SparseArray.of(GaussScalar.of(0, 5), 5, 4, 8);
-    assertThrows(UnsupportedOperationException.class, () -> sparse.unmodifiable());
     assertThrows(UnsupportedOperationException.class, () -> sparse.append(Array.zeros(4, 8)));
     assertThrows(Throw.class, () -> sparse.map(RealScalar.ONE::add));
   }
@@ -188,15 +186,15 @@ class SparseArrayTest {
     Tensor sparse = TestHelper.of(tensor);
     Tensor result = sparse.block(Arrays.asList(1, 0), Arrays.asList(0, 0));
     assertEquals(result, Tensors.empty());
-    assertEquals(Dimensions.of(result), Arrays.asList(0));
+    assertEquals(Dimensions.of(result), List.of(0));
   }
 
   @Test
   void testBlock2() {
     Tensor tensor = Tensors.fromString("{{1,0,3,0,0},{5,6,8,0,0},{0,2,9,0,4}}");
     Tensor sparse = TestHelper.of(tensor);
-    Tensor result = sparse.block(Arrays.asList(2), Arrays.asList(1));
-    assertEquals(result, tensor.block(Arrays.asList(2), Arrays.asList(1)));
+    Tensor result = sparse.block(List.of(2), List.of(1));
+    assertEquals(result, tensor.block(List.of(2), List.of(1)));
     assertEquals(Dimensions.of(result), Arrays.asList(1, 5));
     MatrixQ.require(result);
   }
@@ -353,14 +351,6 @@ class SparseArrayTest {
     assertEquals(tensor.toString(), string);
     Tensor dot = sparseArray.dot(HilbertMatrix.of(3));
     assertInstanceOf(SparseArray.class, dot);
-  }
-
-  @Test
-  void testKeyCollision() {
-    Map<Integer, Integer> map = new HashMap<>();
-    map.put(3, 5);
-    // Stream.concat(map.entrySet().stream(), map.entrySet().stream()) //
-    // .collect(SparseArray._map(Entry::getKey, i -> Tensors.empty()));
   }
 
   @Test
